--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 Flask==2.3.3
 Werkzeug==2.3.7
 gunicorn==21.2.0
+Flask-SQLAlchemy==3.0.5
+Flask-Migrate==4.0.5
+PyMySQL==1.1.0
+Flask-Login==0.6.3
+Flask-WTF==1.1.1
+WTForms==3.0.1
+python-dotenv==1.0.0
+bcrypt==4.0.1
